# chimera

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  Dockerfile  LOOM_VIDEO_SCRIPT.md  Makefile  README.md  package-lock.json  pyproject.toml
.cursor/: rules  srs_alignment_prompt.md
.github/workflows/: main.yml
agents/: README.md
agents/judge/: SOUL.md
agents/planner/: SOUL.md
agents/worker/: SOUL.md
research/: SRS.md  architecture_strategy.md  deep_research.md  mcp_sense_connection_log.md  tooling_strategy.md
scripts/: validate_srs.py
skills/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: README.md  conftest.py  test_skills_interface.py  test_trend_fetcher.py
