[project]
name = "chimera"
version = "0.1.0"
description = "Project Chimera - Autonomous AI Influencer System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FDE Trainee", email = "fde@projectchimera.dev"}
]

# Core dependencies for the autonomous influencer system
dependencies = [
    # HTTP and API handling
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Database and data validation
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Async support
    "asyncio>=3.4.3",
    "anyio>=4.0.0",
    
    # Configuration management
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    
    # Type checking and linting
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.6.0",
]

# Tool configurations
[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
